xpr-parser/parser.output
Nonterminals useless in grammar

   charlit


Terminals unused in grammar

   EOL
   CHARLIT
   SINGLEQ
   DOUBLEQ


Rules useless in grammar

   83 charlit: CHARLIT


State 160 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: classBegin $end

    1 classBegin: CLASS PROGRAM '{' '}'
    2           | CLASS PROGRAM '{' fieldDec methodDecList '}'
    3           | CLASS PROGRAM '{' methodDecList '}'
    4           | CLASS PROGRAM '{' fieldDec '}'

    5 fieldDec: type fieldArgs ';'
    6         | fieldDec type fieldArgs ';'

    7 fieldArgs: ID
    8          | ID ',' fieldArgs
    9          | ID '[' intlit ']'
   10          | ID '[' intlit ']' ',' fieldArgs

   11 methodDec: type ID '(' methodArgs ')' block
   12          | type ID '(' ')' block
   13          | VOID ID '(' methodArgs ')' block
   14          | VOID ID '(' ')' block

   15 methodDecList: methodDec
   16              | methodDecList methodDec

   17 methodArg: type ID

   18 methodArgs: methodArg
   19           | methodArg ',' methodArgs

   20 block: '{' '}'
   21      | '{' varDecl '}'
   22      | '{' statement '}'
   23      | '{' varDecl statement '}'

   24 varDecl: type blockVars ';'
   25        | type blockVars ';' varDecl

   26 blockVars: ID
   27          | blockVars ',' ID

   28 statementContents: location '=' expr ';'
   29                  | location PLUSEQ expr ';'
   30                  | location MINUSEQ expr ';'
   31                  | methodcall ';'
   32                  | IF '(' expr ')' block
   33                  | IF '(' expr ')' block ELSE block
   34                  | FOR ID '=' expr ',' expr block
   35                  | RETURN ';'
   36                  | RETURN expr ';'
   37                  | BREAK ';'
   38                  | CONTINUE ';'
   39                  | block

   40 statement: statementContents
   41          | statement statementContents

   42 type: INT
   43     | BOOLEAN

   44 expr: location
   45     | methodcall
   46     | literal
   47     | '-' expr
   48     | '!' expr
   49     | expr '*' expr
   50     | expr '/' expr
   51     | expr '%' expr
   52     | expr '+' expr
   53     | expr '-' expr
   54     | expr '<' expr
   55     | expr '>' expr
   56     | expr LE expr
   57     | expr GE expr
   58     | expr EE expr
   59     | expr NE expr
   60     | expr AND expr
   61     | expr OR expr
   62     | '(' expr ')'

   63 location: ID
   64         | ID '[' expr ']'

   65 methodcall: ID '(' ')'
   66           | ID '(' arguments ')'
   67           | CALLOUT '(' stringlit ',' calloutArgsList ')'
   68           | CALLOUT '(' stringlit ')'

   69 calloutArgsList: expr
   70                | stringlit
   71                | expr ',' calloutArgsList
   72                | stringlit ',' calloutArgsList

   73 arguments: expr
   74          | expr ',' arguments

   75 literal: intlit
   76        | boollit
   77        | stringlit

   78 intlit: DECLIT
   79       | HEXLIT

   80 boollit: TRUE
   81        | FALSE

   82 stringlit: STRINGLIT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 48
'%' (37) 51
'(' (40) 11 12 13 14 32 33 62 65 66 67 68
')' (41) 11 12 13 14 32 33 62 65 66 67 68
'*' (42) 49
'+' (43) 52
',' (44) 8 10 19 27 34 67 71 72 74
'-' (45) 47 53
'/' (47) 50
';' (59) 5 6 24 25 28 29 30 31 35 36 37 38
'<' (60) 54
'=' (61) 28 34
'>' (62) 55
'[' (91) 9 10 64
']' (93) 9 10 64
'{' (123) 1 2 3 4 20 21 22 23
'}' (125) 1 2 3 4 20 21 22 23
error (256)
BOOLEAN (258) 43
BREAK (259) 37
CALLOUT (260) 67 68
CLASS (261) 1 2 3 4
CONTINUE (262) 38
ELSE (263) 33
FALSE (264) 81
FOR (265) 34
INT (266) 42
IF (267) 32 33
RETURN (268) 35 36
TRUE (269) 80
VOID (270) 13 14
EOL (271)
PROGRAM (272) 1 2 3 4
PLUSEQ (273) 29
MINUSEQ (274) 30
AND (275) 60
OR (276) 61
EE (277) 58
NE (278) 59
LE (279) 56
GE (280) 57
STRINGLIT (281) 82
CHARLIT (282)
DECLIT (283) 78
HEXLIT (284) 79
ID (285) 7 8 9 10 11 12 13 14 17 26 27 34 63 64 65 66
SINGLEQ (286)
DOUBLEQ (287)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
classBegin (51)
    on left: 1 2 3 4, on right: 0
fieldDec (52)
    on left: 5 6, on right: 2 4 6
fieldArgs (53)
    on left: 7 8 9 10, on right: 5 6 8 10
methodDec (54)
    on left: 11 12 13 14, on right: 15 16
methodDecList (55)
    on left: 15 16, on right: 2 3 16
methodArg (56)
    on left: 17, on right: 18 19
methodArgs (57)
    on left: 18 19, on right: 11 13 19
block (58)
    on left: 20 21 22 23, on right: 11 12 13 14 32 33 34 39
varDecl (59)
    on left: 24 25, on right: 21 23 25
blockVars (60)
    on left: 26 27, on right: 24 25 27
statementContents (61)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39, on right: 40 41
statement (62)
    on left: 40 41, on right: 22 23 41
type (63)
    on left: 42 43, on right: 5 6 11 12 17 24 25
expr (64)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62, on right: 28 29 30 32 33 34 36 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 64 69 71 73 74
location (65)
    on left: 63 64, on right: 28 29 30 44
methodcall (66)
    on left: 65 66 67 68, on right: 31 45
calloutArgsList (67)
    on left: 69 70 71 72, on right: 67 71 72
arguments (68)
    on left: 73 74, on right: 66 74
literal (69)
    on left: 75 76 77, on right: 46
intlit (70)
    on left: 78 79, on right: 9 10 75
boollit (71)
    on left: 80 81, on right: 76
stringlit (72)
    on left: 82, on right: 67 68 70 72 77


State 0

    0 $accept: . classBegin $end
    1 classBegin: . CLASS PROGRAM '{' '}'
    2           | . CLASS PROGRAM '{' fieldDec methodDecList '}'
    3           | . CLASS PROGRAM '{' methodDecList '}'
    4           | . CLASS PROGRAM '{' fieldDec '}'

    CLASS  shift, and go to state 1

    classBegin  go to state 2


State 1

    1 classBegin: CLASS . PROGRAM '{' '}'
    2           | CLASS . PROGRAM '{' fieldDec methodDecList '}'
    3           | CLASS . PROGRAM '{' methodDecList '}'
    4           | CLASS . PROGRAM '{' fieldDec '}'

    PROGRAM  shift, and go to state 3


State 2

    0 $accept: classBegin . $end

    $end  shift, and go to state 4


State 3

    1 classBegin: CLASS PROGRAM . '{' '}'
    2           | CLASS PROGRAM . '{' fieldDec methodDecList '}'
    3           | CLASS PROGRAM . '{' methodDecList '}'
    4           | CLASS PROGRAM . '{' fieldDec '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: classBegin $end .

    $default  accept


State 5

    1 classBegin: CLASS PROGRAM '{' . '}'
    2           | CLASS PROGRAM '{' . fieldDec methodDecList '}'
    3           | CLASS PROGRAM '{' . methodDecList '}'
    4           | CLASS PROGRAM '{' . fieldDec '}'
    5 fieldDec: . type fieldArgs ';'
    6         | . fieldDec type fieldArgs ';'
   11 methodDec: . type ID '(' methodArgs ')' block
   12          | . type ID '(' ')' block
   13          | . VOID ID '(' methodArgs ')' block
   14          | . VOID ID '(' ')' block
   15 methodDecList: . methodDec
   16              | . methodDecList methodDec
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8
    '}'      shift, and go to state 9

    fieldDec       go to state 10
    methodDec      go to state 11
    methodDecList  go to state 12
    type           go to state 13


State 6

   43 type: BOOLEAN .

    $default  reduce using rule 43 (type)


State 7

   42 type: INT .

    $default  reduce using rule 42 (type)


State 8

   13 methodDec: VOID . ID '(' methodArgs ')' block
   14          | VOID . ID '(' ')' block

    ID  shift, and go to state 14


State 9

    1 classBegin: CLASS PROGRAM '{' '}' .

    $default  reduce using rule 1 (classBegin)


State 10

    2 classBegin: CLASS PROGRAM '{' fieldDec . methodDecList '}'
    4           | CLASS PROGRAM '{' fieldDec . '}'
    6 fieldDec: fieldDec . type fieldArgs ';'
   11 methodDec: . type ID '(' methodArgs ')' block
   12          | . type ID '(' ')' block
   13          | . VOID ID '(' methodArgs ')' block
   14          | . VOID ID '(' ')' block
   15 methodDecList: . methodDec
   16              | . methodDecList methodDec
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8
    '}'      shift, and go to state 15

    methodDec      go to state 11
    methodDecList  go to state 16
    type           go to state 17


State 11

   15 methodDecList: methodDec .

    $default  reduce using rule 15 (methodDecList)


State 12

    3 classBegin: CLASS PROGRAM '{' methodDecList . '}'
   11 methodDec: . type ID '(' methodArgs ')' block
   12          | . type ID '(' ')' block
   13          | . VOID ID '(' methodArgs ')' block
   14          | . VOID ID '(' ')' block
   16 methodDecList: methodDecList . methodDec
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8
    '}'      shift, and go to state 18

    methodDec  go to state 19
    type       go to state 20


State 13

    5 fieldDec: type . fieldArgs ';'
    7 fieldArgs: . ID
    8          | . ID ',' fieldArgs
    9          | . ID '[' intlit ']'
   10          | . ID '[' intlit ']' ',' fieldArgs
   11 methodDec: type . ID '(' methodArgs ')' block
   12          | type . ID '(' ')' block

    ID  shift, and go to state 21

    fieldArgs  go to state 22


State 14

   13 methodDec: VOID ID . '(' methodArgs ')' block
   14          | VOID ID . '(' ')' block

    '('  shift, and go to state 23


State 15

    4 classBegin: CLASS PROGRAM '{' fieldDec '}' .

    $default  reduce using rule 4 (classBegin)


State 16

    2 classBegin: CLASS PROGRAM '{' fieldDec methodDecList . '}'
   11 methodDec: . type ID '(' methodArgs ')' block
   12          | . type ID '(' ')' block
   13          | . VOID ID '(' methodArgs ')' block
   14          | . VOID ID '(' ')' block
   16 methodDecList: methodDecList . methodDec
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8
    '}'      shift, and go to state 24

    methodDec  go to state 19
    type       go to state 20


State 17

    6 fieldDec: fieldDec type . fieldArgs ';'
    7 fieldArgs: . ID
    8          | . ID ',' fieldArgs
    9          | . ID '[' intlit ']'
   10          | . ID '[' intlit ']' ',' fieldArgs
   11 methodDec: type . ID '(' methodArgs ')' block
   12          | type . ID '(' ')' block

    ID  shift, and go to state 21

    fieldArgs  go to state 25


State 18

    3 classBegin: CLASS PROGRAM '{' methodDecList '}' .

    $default  reduce using rule 3 (classBegin)


State 19

   16 methodDecList: methodDecList methodDec .

    $default  reduce using rule 16 (methodDecList)


State 20

   11 methodDec: type . ID '(' methodArgs ')' block
   12          | type . ID '(' ')' block

    ID  shift, and go to state 26


State 21

    7 fieldArgs: ID .  [';']
    8          | ID . ',' fieldArgs
    9          | ID . '[' intlit ']'
   10          | ID . '[' intlit ']' ',' fieldArgs
   11 methodDec: type ID . '(' methodArgs ')' block
   12          | type ID . '(' ')' block

    '('  shift, and go to state 27
    '['  shift, and go to state 28
    ','  shift, and go to state 29

    $default  reduce using rule 7 (fieldArgs)


State 22

    5 fieldDec: type fieldArgs . ';'

    ';'  shift, and go to state 30


State 23

   13 methodDec: VOID ID '(' . methodArgs ')' block
   14          | VOID ID '(' . ')' block
   17 methodArg: . type ID
   18 methodArgs: . methodArg
   19           | . methodArg ',' methodArgs
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7
    ')'      shift, and go to state 31

    methodArg   go to state 32
    methodArgs  go to state 33
    type        go to state 34


State 24

    2 classBegin: CLASS PROGRAM '{' fieldDec methodDecList '}' .

    $default  reduce using rule 2 (classBegin)


State 25

    6 fieldDec: fieldDec type fieldArgs . ';'

    ';'  shift, and go to state 35


State 26

   11 methodDec: type ID . '(' methodArgs ')' block
   12          | type ID . '(' ')' block

    '('  shift, and go to state 27


State 27

   11 methodDec: type ID '(' . methodArgs ')' block
   12          | type ID '(' . ')' block
   17 methodArg: . type ID
   18 methodArgs: . methodArg
   19           | . methodArg ',' methodArgs
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7
    ')'      shift, and go to state 36

    methodArg   go to state 32
    methodArgs  go to state 37
    type        go to state 34


State 28

    9 fieldArgs: ID '[' . intlit ']'
   10          | ID '[' . intlit ']' ',' fieldArgs
   78 intlit: . DECLIT
   79       | . HEXLIT

    DECLIT  shift, and go to state 38
    HEXLIT  shift, and go to state 39

    intlit  go to state 40


State 29

    7 fieldArgs: . ID
    8          | . ID ',' fieldArgs
    8          | ID ',' . fieldArgs
    9          | . ID '[' intlit ']'
   10          | . ID '[' intlit ']' ',' fieldArgs

    ID  shift, and go to state 41

    fieldArgs  go to state 42


State 30

    5 fieldDec: type fieldArgs ';' .

    $default  reduce using rule 5 (fieldDec)


State 31

   14 methodDec: VOID ID '(' ')' . block
   20 block: . '{' '}'
   21      | . '{' varDecl '}'
   22      | . '{' statement '}'
   23      | . '{' varDecl statement '}'

    '{'  shift, and go to state 43

    block  go to state 44


State 32

   18 methodArgs: methodArg .  [')']
   19           | methodArg . ',' methodArgs

    ','  shift, and go to state 45

    $default  reduce using rule 18 (methodArgs)


State 33

   13 methodDec: VOID ID '(' methodArgs . ')' block

    ')'  shift, and go to state 46


State 34

   17 methodArg: type . ID

    ID  shift, and go to state 47


State 35

    6 fieldDec: fieldDec type fieldArgs ';' .

    $default  reduce using rule 6 (fieldDec)


State 36

   12 methodDec: type ID '(' ')' . block
   20 block: . '{' '}'
   21      | . '{' varDecl '}'
   22      | . '{' statement '}'
   23      | . '{' varDecl statement '}'

    '{'  shift, and go to state 43

    block  go to state 48


State 37

   11 methodDec: type ID '(' methodArgs . ')' block

    ')'  shift, and go to state 49


State 38

   78 intlit: DECLIT .

    $default  reduce using rule 78 (intlit)


State 39

   79 intlit: HEXLIT .

    $default  reduce using rule 79 (intlit)


State 40

    9 fieldArgs: ID '[' intlit . ']'
   10          | ID '[' intlit . ']' ',' fieldArgs

    ']'  shift, and go to state 50


State 41

    7 fieldArgs: ID .  [';']
    8          | ID . ',' fieldArgs
    9          | ID . '[' intlit ']'
   10          | ID . '[' intlit ']' ',' fieldArgs

    '['  shift, and go to state 28
    ','  shift, and go to state 29

    $default  reduce using rule 7 (fieldArgs)


State 42

    8 fieldArgs: ID ',' fieldArgs .

    $default  reduce using rule 8 (fieldArgs)


State 43

   20 block: . '{' '}'
   20      | '{' . '}'
   21      | . '{' varDecl '}'
   21      | '{' . varDecl '}'
   22      | . '{' statement '}'
   22      | '{' . statement '}'
   23      | . '{' varDecl statement '}'
   23      | '{' . varDecl statement '}'
   24 varDecl: . type blockVars ';'
   25        | . type blockVars ';' varDecl
   28 statementContents: . location '=' expr ';'
   29                  | . location PLUSEQ expr ';'
   30                  | . location MINUSEQ expr ';'
   31                  | . methodcall ';'
   32                  | . IF '(' expr ')' block
   33                  | . IF '(' expr ')' block ELSE block
   34                  | . FOR ID '=' expr ',' expr block
   35                  | . RETURN ';'
   36                  | . RETURN expr ';'
   37                  | . BREAK ';'
   38                  | . CONTINUE ';'
   39                  | . block
   40 statement: . statementContents
   41          | . statement statementContents
   42 type: . INT
   43     | . BOOLEAN
   63 location: . ID
   64         | . ID '[' expr ']'
   65 methodcall: . ID '(' ')'
   66           | . ID '(' arguments ')'
   67           | . CALLOUT '(' stringlit ',' calloutArgsList ')'
   68           | . CALLOUT '(' stringlit ')'

    BOOLEAN   shift, and go to state 6
    BREAK     shift, and go to state 51
    CALLOUT   shift, and go to state 52
    CONTINUE  shift, and go to state 53
    FOR       shift, and go to state 54
    INT       shift, and go to state 7
    IF        shift, and go to state 55
    RETURN    shift, and go to state 56
    ID        shift, and go to state 57
    '{'       shift, and go to state 43
    '}'       shift, and go to state 58

    block              go to state 59
    varDecl            go to state 60
    statementContents  go to state 61
    statement          go to state 62
    type               go to state 63
    location           go to state 64
    methodcall         go to state 65


State 44

   14 methodDec: VOID ID '(' ')' block .

    $default  reduce using rule 14 (methodDec)


State 45

   17 methodArg: . type ID
   18 methodArgs: . methodArg
   19           | . methodArg ',' methodArgs
   19           | methodArg ',' . methodArgs
   42 type: . INT
   43     | . BOOLEAN

    BOOLEAN  shift, and go to state 6
    INT      shift, and go to state 7

    methodArg   go to state 32
    methodArgs  go to state 66
    type        go to state 34


State 46

   13 methodDec: VOID ID '(' methodArgs ')' . block
   20 block: . '{' '}'
   21      | . '{' varDecl '}'
   22      | . '{' statement '}'
   23      | . '{' varDecl statement '}'

    '{'  shift, and go to state 43

    block  go to state 67


State 47

   17 methodArg: type ID .

    $default  reduce using rule 17 (methodArg)


State 48

   12 methodDec: type ID '(' ')' block .

    $default  reduce using rule 12 (methodDec)


State 49

   11 methodDec: type ID '(' methodArgs ')' . block
   20 block: . '{' '}'
   21      | . '{' varDecl '}'
   22      | . '{' statement '}'
   23      | . '{' varDecl statement '}'

    '{'  shift, and go to state 43

    block  go to state 68


State 50

    9 fieldArgs: ID '[' intlit ']' .  [';']
   10          | ID '[' intlit ']' . ',' fieldArgs

    ','  shift, and go to state 69

    $default  reduce using rule 9 (fieldArgs)


State 51

   37 statementContents: BREAK . ';'

    ';'  shift, and go to state 70


State 52

   67 methodcall: CALLOUT . '(' stringlit ',' calloutArgsList ')'
   68           | CALLOUT . '(' stringlit ')'

    '('  shift, and go to state 71


State 53

   38 statementContents: CONTINUE . ';'

    ';'  shift, and go to state 72


State 54

   34 statementContents: FOR . ID '=' expr ',' expr block

    ID  shift, and go to state 73


State 55

   32 statementContents: IF . '(' expr ')' block
   33                  | IF . '(' expr ')' block ELSE block

    '('  shift, and go to state 74


State 56

   35 statementContents: RETURN . ';'
   36                  | RETURN . expr ';'
   44 expr: . location
   45     | . methodcall
   46     | . literal
   47     | . '-' expr
   48     | . '!' expr
   49     | . expr '*' expr
   50     | . expr '/' expr
   51     | . expr '%' expr
   52     | . expr '+' expr
   53     | . expr '-' expr
   54     | . expr '<' expr
   55     | . expr '>' expr
   56     | . expr LE expr
   57     | . expr GE expr
   58     | . expr EE expr
   59     | . expr NE expr
   60     | . expr AND expr
   61     | . expr OR expr
   62     | . '(' expr ')'
   63 location: . ID
   64         | . ID '[' expr ']'
   65 methodcall: . ID '(' ')'
   66           | . ID '(' arguments ')'
   67           | . CALLOUT '(' stringlit ',' calloutArgsList ')'
   68           | . CALLOUT '(' stringlit ')'
   75 literal: . intlit
   76        | . boollit
   77        | . stringlit
   78 intlit: . DECLIT
   79       | . HEXLIT
   80 boollit: . TRUE
   81        | . FALSE
   82 stringlit: . STRINGLIT
